--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
             />
           </button>
         </section>
+
+        <form class="popup popup_opened">
+          <img
+            class="popup__close-icon"
+            src="./images/CloseIcon.svg"
+            alt="Icono de una X para cerrar ventana emergente."
+          />
+          <fieldset class="popup__container">
+            <label class="popup__title">Edit profile</label>
+            <input
+              type="text"
+              id="name"
+              placeholder="Nombre"
+              class="popup__text"
+            />
+            <input
+              type="text"
+              id="about"
+              placeholder="Acerca de mí"
+              class="popup__text"
+            />
+            <button type="submit" class="popup__button">Guardar</button>
+          </fieldset>
+        </form>
+
         <section class="elements">
           <div class="element">
             <img
@@ -58,7 +83,7 @@
               <img
                 class="icon-like"
                 src="./images/like.svg"
-                alt="Icono de corazón."
+                alt="Icono de corazón"
               />
             </div>
           </div>
@@ -74,7 +99,7 @@
               <img
                 class="icon-like"
                 src="./images/like.svg"
-                alt="Icono de corazón."
+                alt="Icono de corazón"
               />
             </div>
           </div>
@@ -90,7 +115,7 @@
               <img
                 class="icon-like"
                 src="./images/like.svg"
-                alt="Icono de corazón."
+                alt="Icono de corazón"
               />
             </div>
           </div>
@@ -106,7 +131,7 @@
               <img
                 class="icon-like"
                 src="./images/like.svg"
-                alt="Icono de corazón."
+                alt="Icono de corazón"
               />
             </div>
           </div>
@@ -122,7 +147,7 @@
               <img
                 class="icon-like"
                 src="./images/like.svg"
-                alt="Icono de corazón."
+                alt="Icono de corazón"
               />
             </div>
           </div>
@@ -138,7 +163,7 @@
               <img
                 class="icon-like"
                 src="./images/like.svg"
-                alt="Icono de corazón."
+                alt="Icono de corazón"
               />
             </div>
           </div>
@@ -148,5 +173,6 @@
         </footer>
       </main>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
