--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <img
               class="image-show__close-icon"
               src="./images/CloseIcon.svg"
-              alt=""
+              alt="Icono de una X para cerrar imagen."
             />
             <img class="image-show__popup" src="" alt="" />
             <h3 class="image-show__title"></h3>
