--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </button>
         </section>
 
-        <form class="popup popup_opened">
+        <form class="popup popup_closed" novalidate>
           <fieldset class="popup__container">
             <img
               class="popup__close-icon"
@@ -60,14 +60,28 @@
               id="name"
               placeholder="Nombre"
               class="popup__text"
+              required
+              minlength="2"
+              maxlength="40"
             />
+            <span class="popup__input-error" id="name-error"> </span>
             <input
               type="text"
               id="about"
               placeholder="Acerca de mí"
               class="popup__text"
+              required
+              minlength="2"
+              maxlength="200"
             />
-            <button type="submit" class="popup__button">Guardar</button>
+            <span class="popup__input-error" id="about-error"> </span>
+            <button
+              type="submit"
+              class="popup__button_inactive popup__button"
+              disabled
+            >
+              Guardar
+            </button>
           </fieldset>
         </form>
 
@@ -97,7 +111,7 @@
           </template>
         </section>
 
-        <section class="popup popup_opened" id="popupImage">
+        <section class="popup popup_closed" id="popupImage">
           <div class="image-show">
             <img
               class="image-show__close-icon"
@@ -109,7 +123,7 @@
           </div>
         </section>
 
-        <form class="popup popup_closed-element">
+        <form class="popup popup_closed-element" novalidate>
           <fieldset class="popup__container">
             <img
               class="popup__close-icon popup__close-icon_element"
@@ -122,14 +136,25 @@
               id="titulo"
               placeholder="Titulo"
               class="popup__text"
+              required
+              minlength="2"
+              maxlength="30"
             />
+            <span class="popup__input-error" id="titulo-error"></span>
             <input
-              type="text"
+              type="url"
               id="enlace"
-              placeholder="Enlace a la imagen"
+              placeholder="URL de la imagen"
               class="popup__text"
+              required
             />
-            <button type="submit" id="buttonElement" class="popup__button">
+            <span class="popup__input-error" id="enlace-error"></span>
+            <button
+              type="submit"
+              id="buttonElement"
+              class="popup__button popup__button_inactive"
+              disabled
+            >
               Crear
             </button>
           </fieldset>
@@ -140,5 +165,6 @@
       </main>
     </div>
     <script src="script.js"></script>
+    <script src="validate.js"></script>
   </body>
 </html>
