--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
         </footer>
       </main>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="card.js"></script>
+    <script type="module" src="utils.js"></script>
     <script src="validate.js"></script>
   </body>
 </html>
