Arreglar funiones para agregar y mostrar card

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     <script type="module" src="script.js"></script>
     <script type="module" src="card.js"></script>
     <script type="module" src="utils.js"></script>
+    <script type="module" src="FormValidator.js"></script>
     <script src="validate.js"></script>
   </body>
 </html>
