--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <div class="profile__avatar">
             <img
               class="profile__image"
-              src="<%=require(./images/image.jpg')%>"
+              src="<%=require('./images/image.jpg')%>"
               alt="Foto de Perfil"
             />
           </div>
@@ -32,7 +32,7 @@
             <button class="profile__edit">
               <img
                 class="profile__icon"
-                src="<%=require(./images/Edit.svg')%>"
+                src="<%=require('./images/Edit.svg')%>"
                 alt="icono de lápiz para editar perfil."
               />
             </button>
@@ -40,7 +40,7 @@
           <button class="add-button" id="addButton">
             <img
               class="add-button__icon"
-              src="<%=require(./images/Signo+.svg')%>"
+              src="<%=require('./images/Signo+.svg')%>"
               alt="Icono del signo + para añadir card."
             />
           </button>
@@ -50,7 +50,7 @@
           <fieldset class="popup__container">
             <img
               class="popup__close-icon"
-              src="<%=require(./images/CloseIcon.svg')%>"
+              src="<%=require('./images/CloseIcon.svg')%>"
               alt="Icono de una X para cerrar ventana emergente."
             />
             <label class="popup__title">Edit profile</label>
