--- a/src/index.html
+++ b/src/index.html
@@ -92,12 +92,7 @@
                 src="<%=require('./images/Papelera.svg')%>"
                 alt="Icono de papelera para eliminar"
               />
-              <img
-                class="element__image"
-                id="src"
-                src=" "
-                alt="Paisaje del Valle Yosemite."
-              />
+              <img class="element__image" id="src" src=" " alt=" " />
               <div class="element__footer-photo">
                 <h3 class="element__title"></h3>
                 <img
