--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
               class="popup__text"
               required
             />
-            <span class="popup__input-error" id="enlace-error"></span>
+            <span class="popup__input-error" id="linkAvatar-error"></span>
             <button
               type="submit"
               id="buttonElement"
