Terminar Función Like

--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,12 @@
       <main>
         <section class="profile">
           <div class="profile__avatar">
-            <img
-              class="profile__image"
-              src="<%=require('./images/image.jpg')%>"
-              alt="Foto de Perfil"
-            />
+            <img class="profile__image" src="" alt="Foto de Perfil" />
           </div>
           <div class="profile__info">
             <div>
-              <h1 class="profile__name">Jacques Cousteau</h1>
-              <h2 class="profile__occupation">Explorador</h2>
+              <h1 class="profile__name"></h1>
+              <h2 class="profile__occupation"></h2>
             </div>
             <button class="profile__edit">
               <img
