--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
             <span class="popup__input-error" id="enlace-error"></span>
             <button
               type="submit"
-              id="buttonElement"
+              id="cardButton"
               class="popup__button popup__button_inactive"
               disabled
             >
