--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alrededor de los Estados Unidos</title>
   </head>
-  <body>
+  <body class="body">
     <div class="page">
       <header class="header">
         <img
